# Custom-Network-Protocol-with-Poco-C-Libraries

./: CMakeLists.txt  README.md
include/: Client.hpp  Protocol.hpp  Server.hpp  security.hpp
keys/: private.pem  public.pem
src/: Client.cpp  Protocol.cpp  Server.cpp  main.cpp  main_test.cpp  security.cpp
